--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sep/relay-context",
+  "name": "digitalegarage/relay-context",
   "version": "1.0.0",
   "private": true,
   "main": "dist/",
